--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,15 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>4.2.6.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.39</version>
+		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+		</dependency>
 	</dependencies>
 </project>
