--- a/src/main/resources/driver.properties
+++ b/src/main/resources/driver.properties
@@ -1,4 +1,4 @@
 driverClass=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/test_db
+url=jdbc:mysql://localhost:3306/springdemo
 username=root
 password=liferay
